--- a/package.json
+++ b/package.json
@@ -1,4 +1,19 @@
 {
+  "name": "g3-station",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "seeds": "node seeds/index.js"
+  },
+
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+
+
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.4",
