--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "start": "node server.js",
     "seeds": "node seeds/index.js"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
-
-
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.4",
     "dotenv": "^16.0.1",
