--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "heroku": "^7.60.2",
     "mysql2": "^2.3.3",
+    "node": "^17.7.2",
+    "pg": "^8.7.3",
     "sequelize": "^6.20.1"
   }
 }
