--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "homepage": "https://github.com/IanSky1/G3-station#readme",
   "dependencies": {
-    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "handlebars": "^4.7.7",
     "mysql2": "^2.3.3",
     "sequelize": "^6.20.1"
   }
